# streamlit-app-factory

./: .python-version  crud.py  demo_generator.py  model.py  process_utils.py  pyproject.toml  requirements.txt  run.sh  sidebar.py  subprocess_jobs.py  temp.py  test.db  utils.py
.streamlit/: config.toml
references/: app.py  multipage.py  sentiment_algorithm.py  streamlit_useful_practices.py
references/single_apps/: empty.py  ref_annotated_text.py  ref_cheat_sheet.py  ref_data_upload.py
sample_table/: app_meta.ini  streamlit_app.py
sample_text_classification/: app_meta.ini  run.sh  streamlit_app.py
