[tool.poetry]
name = "appfactory"
version = "0.1.0"
description = "project apps fastly created by streamlit"
authors = ["junhyeok-jaykim <87380431+junhyeok-jaykim@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
